# cofaas-idl-transform

./: .gitmodules  Cargo.toml
generator/: Cargo.toml
generator-bin/: Cargo.toml
generator-bin/src/: main.rs
generator/src/: lib.rs
generator/testdata/: helloworld.proto.golden  hw_prodcon_combined.golden  prodcon.proto.golden
